[package]
name = "gitid"
version = "0.1.0"
authors = ["Your Name"]
edition = "2018"
description = "Manages git user emails and names"
repository = "https://github.com/camgrodgers/gitid"
keywords = ["git"]
categories = ["command-line-utilities"]
license = "AGPL-3.0"

[[bin]]
path = "src/main.rs"
name = "gitid"



[dependencies]
clap = "2.33.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dirs = "2.0.2"
